fixed some layout issues

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -68,7 +68,7 @@ th {
 }
 
 #middlebottom {
-  width: 700px;
+  width: 660px;
   background: #eeeeee;
   float: left;  
   margin-bottom: 10px;
